@@ -2,10 +2,12 @@ Public Beta 20
 
 + Added lore for items dropped by NPCs that says who their previous owner was
 + Added filtering options for waypoints on the Middle-earth map
++ Added new realistic loading functionality to crossbows
 + Added a Ranger crafting table, Ranger banner, and Ranger alignment cape
 + Added Ranger banner bearers
 + Added Woodland Elks
 + Added hireable Wood-elven Elk Cavalry
++ Added the option to set hired NPCs' guard range to 0 in order to keep them stationed
 
 * Changed the starting number of custom waypoints to 5
 * Fixed the Serbian translation not working
